Initial commit: added website files

--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CourseHub</title>
+<title>الدورات - CourseHub</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,20 +24,8 @@
   </div>
 </header>
 
-<section class="hero">
-  <h1>تعلم أي مهارة جديدة بسهولة</h1>
-  <p>انضم إلى آلاف الطلاب وابدأ رحلتك التعليمية الآن!</p>
-  <a href="courses.html" class="btn">استكشف الدورات</a>
-</section>
-
 <section>
-  <h2>الدورات الأكثر شعبية</h2>
-  <div class="categories">
-    <button class="active" data-category="all">الكل</button>
-    <button data-category="web">تطوير الويب</button>
-    <button data-category="ai">الذكاء الاصطناعي</button>
-    <button data-category="design">التصميم</button>
-  </div>
+  <h2>جميع الدورات</h2>
   <div class="courses-grid">
     <div class="card" data-category="web">
       <img src="images/course1.jpg" alt="Course 1">
