--- a/certificates.html
+++ b/certificates.html
@@ -5,8 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>الشهادات - CourseHub</title>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+
 <header>
   <div class="top-bar">
     <div class="logo">CourseHub</div>
@@ -43,7 +45,22 @@
 </section>
 
 <footer>
-  <p>&copy; 2026 CourseHub. جميع الحقوق محفوظة.</p>
+  <div class="container footer-content">
+    <div class="footer-links">
+      <a href="index.html">الرئيسية</a>
+      <a href="courses.html">الدورات</a>
+      <a href="tests.html">الاختبارات</a>
+      <a href="certificates.html">الشهادات</a>
+      <a href="login.html">تسجيل الدخول</a>
+    </div>
+    <div class="socials">
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+    </div>
+    <p>&copy; 2026 CourseHub. جميع الحقوق محفوظة.</p>
+  </div>
 </footer>
 
 <script src="main.js"></script>
