Add logo image to header in index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <!-- Header -->
 <header>
+  <img src="images/your-logo.png" alt="CourseHub Logo" class="site-logo" style="width: 120px; height: auto;">
+
   <div class="top-bar">
     <div class="logo">CourseHub</div>
     <nav>
