--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <!-- Header -->
 <header>
-  <img src="images/your-logo.png" alt="CourseHub Logo" class="site-logo" style="width: 120px; height: auto;">
+ <img src="images/logo.svg" alt="CourseHub Logo" class="site-logo" style="width: 120px; height: auto;">
+
 
   <div class="top-bar">
     <div class="logo">CourseHub</div>
