--- a/login.html
+++ b/login.html
@@ -1,207 +1,15 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تسجيل الدخول - CourseHub</title>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<style>
-  section.course-detail {
-    max-width: 400px;
-    margin: 80px auto;
-    background: white;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-    text-align: center;
-  }
+function handleGoogleLogin(response) {
+  const jwt = response.credential;
 
-  section.course-detail h2 {
-    margin-bottom: 25px;
-    color: #0056d2;
-  }
+  const payload = JSON.parse(atob(jwt.split('.')[1]));
 
-  section.course-detail form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    text-align: left;
-  }
+  console.log("Google User:", payload);
 
-  section.course-detail input {
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    width: 100%;
-  }
+  localStorage.setItem("coursehub_user", JSON.stringify({
+    name: payload.name,
+    email: payload.email,
+    picture: payload.picture
+  }));
 
-  section.course-detail .btn {
-    width: 100%;
-    padding: 12px;
-    background-color: #ff9900;
-    border: none;
-    color: white;
-    font-weight: bold;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s;
-  }
-
-  section.course-detail .btn:hover {
-    background-color: #e68a00;
-  }
-
-  .oauth-buttons {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 20px;
-  }
-
-  .oauth-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    transition: all 0.3s;
-    font-weight: bold;
-    text-decoration: none;
-    color: #333;
-  }
-
-  .oauth-btn:hover {
-    background-color: #f0f0f0;
-  }
-
-  .oauth-google { border-color: #db4437; color: #db4437; }
-  .oauth-facebook { border-color: #1877f2; color: #1877f2; }
-  .oauth-apple { border-color: #000; color: #000; }
-
-  #phone-auth-div input {
-    margin-bottom: 10px;
-  }
-</style>
-</head>
-<body>
-
-<section class="course-detail">
-  <h2>تسجيل الدخول</h2>
-
-  <form id="email-login-form">
-    <label for="email">البريد الإلكتروني</label>
-    <input type="email" id="email" name="email" placeholder="example@mail.com" required>
-    <label for="password">كلمة المرور</label>
-    <input type="password" id="password" name="password" placeholder="********" required>
-    <button class="btn" type="submit">تسجيل الدخول</button>
-  </form>
-
-  <p>أو سجل الدخول بواسطة:</p>
-  <button class="btn" id="google-login"><i class="fab fa-google"></i> Google</button>
-  <button class="btn" id="apple-login"><i class="fab fa-apple"></i> Apple</button>
-  <button class="btn" id="phone-login"><i class="fas fa-phone"></i> الهاتف</button>
-
-  <div id="phone-auth-div" style="display:none;">
-    <input type="text" id="phone-number" placeholder="+213...">
-    <div id="recaptcha-container"></div>
-    <button class="btn" id="send-otp">أرسل رمز التحقق</button>
-    <input type="text" id="otp" placeholder="أدخل رمز التحقق">
-    <button class="btn" id="verify-otp">تحقق</button>
-  </div>
-
-  <p><a href="forgot-password.html">نسيت كلمة المرور؟</a></p>
-  <p>ليس لديك حساب؟ <a href="register.html">إنشاء حساب</a></p>
-
-  <div id="login-message"></div>
-</section>
-
-<script type="module">
-// ===== Firebase Config =====
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-app.js";
-import {
-  getAuth,
-  GoogleAuthProvider,
-  signInWithPopup,
-  signInWithEmailAndPassword,
-  createUserWithEmailAndPassword,
-  sendEmailVerification,
-  RecaptchaVerifier,
-  signInWithPhoneNumber,
-  onAuthStateChanged
-} from "https://www.gstatic.com/firebasejs/10.6.1/firebase-auth.js";
-
-const firebaseConfig = {
-  apiKey: "AIzaSyCagdZU_eAHebBGCmG5W4FFTcDZIH4wOp0",
-  authDomain: "coursehub-23ed2.firebaseapp.com",
-  projectId: "coursehub-23ed2",
-  storageBucket: "coursehub-23ed2.firebasestorage.app",
-  messagingSenderId: "367073521017",
-  appId: "1:367073521017:web:67f5fd3be4c6407247d3a8",
-  measurementId: "G-NJ6E39V9NW"
-};
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-
-// ===== Email Login =====
-email-login-form.addEventListener("submit", async (e)=>{
-  e.preventDefault();
-  try{
-    await signInWithEmailAndPassword(auth,email.value,password.value);
-    window.location.href="index.html";
-  } catch(err){
-    login-message.innerText = err.message;
-  }
-});
-
-// ===== Google Login =====
-google-login.addEventListener("click", async ()=>{
-  try{
-    const provider = new GoogleAuthProvider();
-    await signInWithPopup(auth,provider);
-    window.location.href="index.html";
-  } catch(err){
-    login-message.innerText = err.message;
-  }
-});
-
-// ===== Apple Login (تجريبي) =====
-apple-login.addEventListener("click", ()=>{
-  alert("Apple OAuth سيتم تفعيله لاحقًا");
-});
-
-// ===== Phone Login =====
-phone-login.addEventListener("click", ()=>{
-  phone-auth-div.style.display="block";
-  window.recaptchaVerifier = new RecaptchaVerifier('recaptcha-container', {}, auth);
-});
-
-send-otp.addEventListener("click", async ()=>{
-  try{
-    window.confirmationResult = await signInWithPhoneNumber(auth, phone-number.value, window.recaptchaVerifier);
-    alert("تم إرسال الرمز");
-  } catch(err){
-    login-message.innerText = err.message;
-  }
-});
-
-verify-otp.addEventListener("click", async ()=>{
-  try{
-    await window.confirmationResult.confirm(otp.value);
-    window.location.href="index.html";
-  } catch(err){
-    login-message.innerText = err.message;
-  }
-});
-
-// ===== Auto redirect if logged in =====
-onAuthStateChanged(auth,user=>{
-  if(user) window.location.href="index.html";
-});
-</script>
-
-</body>
-</html>
+  window.location.href = "index.html";
+}
