--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,141 @@
 <title>ملف المستخدم - CourseHub</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<style>
+/* --- Profile Page --- */
+.profile-header {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    background-color: #0056d2;
+    color: white;
+    padding: 30px;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
+}
+
+.profile-header img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid white;
+}
+
+.profile-header .user-details h2 {
+    margin-bottom: 5px;
+    font-size: 28px;
+}
+
+.profile-header .user-details p {
+    font-size: 16px;
+    opacity: 0.8;
+}
+
+.profile-actions {
+    margin-left: auto;
+}
+
+.profile-actions button {
+    background-color: #ff9900;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.profile-actions button:hover {
+    background-color: #e68a00;
+}
+
+/* --- Edit Form --- */
+.edit-form {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    max-width: 600px;
+    margin-bottom: 30px;
+    display: none;
+}
+
+.edit-form input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.edit-form button {
+    width: 100%;
+}
+
+/* --- User Courses --- */
+.user-courses {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+
+.user-courses .card {
+    background: white;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    transition: transform 0.3s;
+}
+
+.user-courses .card:hover {
+    transform: translateY(-5px);
+}
+
+.user-courses .card img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+.user-courses .card-content {
+    padding: 15px;
+}
+
+.user-courses .card-content h3 {
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+.user-courses .card-content p {
+    font-size: 14px;
+    opacity: 0.8;
+    margin-bottom: 10px;
+}
+
+.user-courses .card-content a {
+    text-decoration: none;
+    color: #0056d2;
+    font-weight: bold;
+}
+
+.user-courses .card-content a:hover {
+    text-decoration: underline;
+}
+
+/* Responsive */
+@media(max-width:768px){
+    .profile-header {
+        flex-direction: column;
+        text-align: center;
+    }
+    .profile-actions {
+        margin-left: 0;
+    }
+}
+</style>
 </head>
 
 <body>
@@ -22,31 +157,63 @@
       <a href="profile.html" id="login-link">ملفي</a>
     </nav>
   </div>
-  <div class="search-bar container">
-    <input type="text" placeholder="ابحث عن دورة...">
-    <button><i class="fa fa-search"></i> بحث</button>
-  </div>
   <div id="user-info" class="user-info-container"></div>
 </header>
 
-<section class="course-detail">
-  <h2>ملف المستخدم</h2>
-  <p>يمكنك تعديل بياناتك الشخصية هنا. سيتم استخدام اسمك لاحقاً في الشهادات.</p>
+<section class="container">
 
-  <form id="profile-form">
-    <label for="name">الاسم الكامل</label>
-    <input type="text" id="name" required>
+  <!-- Profile Header -->
+  <div class="profile-header">
+    <img id="profile-pic" src="" alt="صورة المستخدم">
+    <div class="user-details">
+      <h2 id="profile-name"></h2>
+      <p id="profile-email"></p>
+    </div>
+    <div class="profile-actions">
+      <button id="edit-btn">تعديل البيانات</button>
+      <button onclick="logout()">تسجيل الخروج</button>
+    </div>
+  </div>
 
-    <label for="email">البريد الإلكتروني</label>
-    <input type="email" id="email" required>
+  <!-- Edit Form -->
+  <div class="edit-form" id="edit-form">
+    <h3>تعديل بياناتك</h3>
+    <input type="text" id="edit-name" placeholder="الاسم الكامل">
+    <input type="email" id="edit-email" placeholder="البريد الإلكتروني">
+    <input type="text" id="edit-picture" placeholder="رابط الصورة الشخصية">
+    <button id="save-btn" class="btn">حفظ التغييرات</button>
+  </div>
 
-    <label for="picture">رابط الصورة الشخصية</label>
-    <input type="text" id="picture" placeholder="رابط الصورة">
+  <!-- User Courses -->
+  <h2>دوراتي المسجلة</h2>
+  <div class="user-courses" id="user-courses">
+    <!-- Example placeholder courses -->
+    <div class="card">
+      <img src="images/course1.jpg" alt="Course">
+      <div class="card-content">
+        <h3>تطوير الويب للمبتدئين</h3>
+        <p>HTML, CSS, JavaScript</p>
+        <a href="#">الدخول للدورة</a>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/course2.jpg" alt="Course">
+      <div class="card-content">
+        <h3>الذكاء الاصطناعي للمبتدئين</h3>
+        <p>Machine Learning & AI</p>
+        <a href="#">الدخول للدورة</a>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/course3.jpg" alt="Course">
+      <div class="card-content">
+        <h3>التصميم الجرافيكي</h3>
+        <p>Photoshop & Illustrator</p>
+        <a href="#">الدخول للدورة</a>
+      </div>
+    </div>
+  </div>
 
-    <button type="submit" class="btn">حفظ التغييرات</button>
-  </form>
-
-  <button class="btn" onclick="logout()">تسجيل الخروج</button>
 </section>
 
 <footer>
@@ -69,36 +236,19 @@
 </footer>
 
 <script>
-// حماية الصفحة: إذا المستخدم غير مسجّل دخول، حوله للـ login
 const user = JSON.parse(localStorage.getItem("coursehub_user"));
+
+// حماية الصفحة
 if(!user){
   window.location.href = "login.html";
 }
 
-// عرض بيانات المستخدم في الفورم
-document.getElementById("name").value = user?.name || "";
-document.getElementById("email").value = user?.email || "";
-document.getElementById("picture").value = user?.picture || "";
+// عرض بيانات المستخدم
+document.getElementById("profile-name").textContent = user.name;
+document.getElementById("profile-email").textContent = user.email;
+document.getElementById("profile-pic").src = user.picture || 'images/default-avatar.png';
 
-// حفظ التغييرات
-document.getElementById("profile-form").addEventListener("submit", e => {
-  e.preventDefault();
-  const updatedUser = {
-    name: document.getElementById("name").value,
-    email: document.getElementById("email").value,
-    picture: document.getElementById("picture").value
-  };
-  localStorage.setItem("coursehub_user", JSON.stringify(updatedUser));
-  alert("تم حفظ التغييرات بنجاح!");
-});
-
-// تسجيل الخروج
-function logout(){
-  localStorage.removeItem("coursehub_user");
-  window.location.href = "login.html";
-}
-
-// تحديث الهيدر لعرض اسم المستخدم
+// الهيدر
 const userInfoContainer = document.getElementById('user-info');
 if(user){
   userInfoContainer.innerHTML = `
@@ -107,6 +257,34 @@ if(user){
     <button class="btn" onclick="logout()">تسجيل الخروج</button>
   `;
   document.getElementById('login-link').style.display = 'none';
+}
+
+// تعديل البيانات
+const editBtn = document.getElementById("edit-btn");
+const editForm = document.getElementById("edit-form");
+editBtn.addEventListener("click", () => {
+  editForm.style.display = editForm.style.display === "block" ? "none" : "block";
+  document.getElementById("edit-name").value = user.name;
+  document.getElementById("edit-email").value = user.email;
+  document.getElementById("edit-picture").value = user.picture;
+});
+
+// حفظ التغييرات
+document.getElementById("save-btn").addEventListener("click", () => {
+  const updatedUser = {
+    name: document.getElementById("edit-name").value,
+    email: document.getElementById("edit-email").value,
+    picture: document.getElementById("edit-picture").value
+  };
+  localStorage.setItem("coursehub_user", JSON.stringify(updatedUser));
+  alert("تم حفظ التغييرات بنجاح!");
+  location.reload();
+});
+
+// تسجيل الخروج
+function logout(){
+  localStorage.removeItem("coursehub_user");
+  window.location.href = "login.html";
 }
 </script>
 
